--- a/styles/style.css
+++ b/styles/style.css
@@ -38,12 +38,23 @@ body {
 }
 
 .btn-primario {
+  margin-top: 35px;
+
   background-color: var(--cor-primaria);
   color: var(--cor-secundaria);
 
   padding: 8px 16px;
   border-radius: 8px;
   cursor: pointer;
+  border: none;
+  width: 100%;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: -0.02em;
+
+  color: var(--cor-secundaria);
 }
 
 header .container {
@@ -73,8 +84,8 @@ header ul li a:hover {
 .toggle-switch {
   display: inline-block;
   position: relative;
-  width: 60px;
-  height: 34px;
+  width: 41px;
+  height: 23px;
 }
 
 .toggle-checkbox {
@@ -96,8 +107,8 @@ header ul li a:hover {
 .toggle-label:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 15px;
+  width: 15px;
   left: 4px;
   bottom: 4px;
   background-color: var(--cor-texto-100);
@@ -110,5 +121,96 @@ header ul li a:hover {
 }
 
 .toggle-checkbox:checked + .toggle-label:before {
-  transform: translateX(26px);
+  transform: translateX(17px);
+}
+
+.spa-result {
+  width: 100%;
+  max-width: 709px;
+}
+.spa-result .title {
+  display: flex;
+  align-items: center;
+}
+.spa-result .title .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: var(--cor-primaria);
+  border-radius: 22px;
+
+  width: 96px;
+  height: 76px;
+
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 125%;
+  text-align: right;
+
+  color: var(--cor-secundaria);
+}
+.spa-result .title h2 {
+  margin-left: 21px;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 39px;
+  letter-spacing: -0.02em;
+
+  color: var(--cor-texto-300);
+}
+.sorteador {
+  margin-top: 35px;
+
+  width: 100%;
+  height: 126px;
+
+  padding: 0 55px;
+
+  background: var(--cor-terciaria-100);
+  border-radius: 24px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 21px;
+}
+.sorteador input[type="number"] {
+  width: 80px;
+  height: 64px;
+
+  background: var(--cor-terciaria-200);
+  border-radius: 36px;
+
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 140%;
+  letter-spacing: -0.02em;
+
+  color: var(--cor-primaria);
+  text-align: center;
+
+  border: none;
+  outline: none;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.sorteador input[type="number"]:focus {
+  border: 1px solid var(--cor-primaria);
+  outline: none;
+}
+
+.opcoes-checkbox .opcoes {
+  margin-top: 32px;
+
+  display: flex;
+  align-items: center;
+  gap: 13px;
 }
