--- a/styles/style.css
+++ b/styles/style.css
@@ -166,9 +166,8 @@ header ul li a:hover {
   margin-top: 35px;
 
   width: 100%;
-  height: 126px;
 
-  padding: 0 55px;
+  padding: 31px 55px;
 
   background: var(--cor-terciaria-100);
   border-radius: 24px;
@@ -176,8 +175,16 @@ header ul li a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 21px;
 }
+.sorteador .input-sorteador {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 21px;
+}
+
 .sorteador input[type="number"] {
   width: 80px;
   height: 64px;
@@ -216,6 +223,11 @@ input[type="number"]::-webkit-outer-spin-button {
   gap: 13px;
 }
 
+.opcoes-checkbox p {
+  font-size: 15px;
+  color: var(--cor-texto-200);
+}
+
 .sorteador.nomes {
   background-color: transparent;
   height: auto;
@@ -224,7 +236,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .text textarea {
   margin-top: 32px;
 
-  width: 709px;
+  width: 100%;
   height: 192px;
   padding: 16px;
   border: 2px solid #27272a;
@@ -247,7 +259,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-top: 21px;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 13px;
 }
 
@@ -298,7 +310,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-top: 35px;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 13px;
 }
 
@@ -312,6 +324,9 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.resultado-numero p {
   color: var(--cor-primaria);
 
   font-style: normal;
@@ -319,4 +334,40 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 24px;
   line-height: 140%;
   letter-spacing: -0.02em;
+}
+
+@media (max-width: 768px) {
+  header .container {
+    flex-direction: column;
+    padding-top: 13px;
+  }
+
+  .spa-result {
+    max-width: 550px;
+  }
+
+  .spa-result .title .icon {
+    width: 76px;
+    height: 56px;
+    font-size: 21px;
+  }
+  .spa-result .title h2 {
+    font-size: 23px;
+  }
+  .sorteador {
+    gap: 13px;
+    padding: 31px 0px;
+  }
+  .sorteador .input-sorteador {
+    gap: 13px;
+  }
+}
+@media (max-width: 480px) {
+  header .container {
+    flex-direction: column;
+    padding-top: 13px;
+  }
+  header ul {
+    gap: 21px;
+  }
 }
