--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,8 @@ input[type="number"]::-webkit-outer-spin-button {
   border: 2px solid var(--cor-primaria);
 }
 
+/* PARTE SAMUEL - VOU TIRAR O CSS DO ROOT EU PROMETO */
+
 #root {
   display: flex;
   align-items: center;
