--- a/styles/style.css
+++ b/styles/style.css
@@ -256,7 +256,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .textarea-foco-erro {
-  border: 2px solid #BE264F !important;
+  border: 2px solid #be264f !important;
 }
 
 #nomesSorteados {
@@ -340,6 +340,11 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 24px;
   line-height: 140%;
   letter-spacing: -0.02em;
+}
+
+.botao-bloqueado {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 
 @media (max-width: 768px) {
